// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Form component with custom props renders the same as last time 1`] = `
<form
  className="fruit-form"
  onSubmit={[Function]}
>
  <h2>
    List out your favourite fruit
  </h2>
  <div
    className="input-wrapper"
  >
    <label
      htmlFor="name"
    >
      Add a fruit:
    </label>
    <input
      name="name"
      onChange={[Function]}
      type="text"
      value="Banana"
    />
  </div>
  <div
    className="input-wrapper"
  >
    <label
      htmlFor="best"
    >
      Is it best?:
    </label>
    <input
      checked={true}
      name="best"
      onChange={[Function]}
      type="checkbox"
      value="true"
    />
  </div>
  <button>
    Add new fruit
  </button>
</form>
`;

exports[`the Form component with default props renders the same as last time 1`] = `
<form
  className="fruit-form"
  onSubmit={[Function]}
>
  <h2>
    List out your favourite fruit
  </h2>
  <div
    className="input-wrapper"
  >
    <label
      htmlFor="name"
    >
      Add a fruit:
    </label>
    <input
      name="name"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="input-wrapper"
  >
    <label
      htmlFor="best"
    >
      Is it best?:
    </label>
    <input
      checked={false}
      name="best"
      onChange={[Function]}
      type="checkbox"
      value="false"
    />
  </div>
  <button>
    Add new fruit
  </button>
</form>
`;
